--- a/preview-src/ui-model.yml
+++ b/preview-src/ui-model.yml
@@ -1,61 +1,36 @@
 antoraVersion: '1.0.0'
 site:
   url: http://localhost:5252
-  title: Brand Docs
+  title: Hartshorn Framework
   homeUrl: &home_url /xyz/5.2/index.html
   components:
-  - name: abc
-    title: Project ABC
+  - name: core
+    title: Hartshorn Core
     url: '#'
-    versions:
-    - &latest_version_abc
+    versions: &versions
+    - &latest_version
       url: '#'
-      version: '1.1'
-      displayVersion: '1.1'
+      version: '0.0.0'
+      displayVersion: '0.0.0'
     - url: '#'
-      version: '1.0'
-      displayVersion: '1.0'
-    latestVersion: *latest_version_abc
+      version: &component_version '0.0.1'
+      displayVersion: *component_version
+    latestVersion: *latest_version
   - &component
-    name: xyz
-    title: &component_title Project XYZ
-    url: /xyz/6.0/index.html
-    versions:
-    - &latest_version_xyz
-      url: /xyz/6.0/index.html
-      version: '6.0'
-      displayVersion: '6.0'
-    - &component_version
-      title: *component_title
-      url: '#'
-      version: '5.2'
-      displayVersion: '5.2'
-    - url: '#'
-      version: '5.1'
-      displayVersion: '5.1'
-    - url: '#'
-      version: '5.0'
-      displayVersion: '5.0'
-    latestVersion: *latest_version_xyz
-  - name: '123'
-    title: Project 123
+    name: proxy
+    title: Hartshorn Proxy
     url: '#'
-    versions:
-    - &latest_version_123
-      url: '#'
-      version: '2.2'
-      displayVersion: '2.2'
-    - url: '#'
-      version: '2.1'
-      displayVersion: '2.1'
-    - url: '#'
-      version: '2.0'
-      displayVersion: '2.0'
-    latestVersion: *latest_version_123
+    versions: *versions
+    latestVersion: *latest_version
+  - name: introspect
+    title: Hartshorn Introspect
+    url: '#'
+    versions: *versions
+    latestVersion: *latest_version
 page:
   url: *home_url
   home: true
-  title: Brand&#8217;s Hardware &amp; Software Requirements
+  title: Hartshorn Framework
   component: *component
   componentVersion: *component_version
   version: '5.2'
@@ -77,7 +52,7 @@ page:
   - content: Quickstart
     url: '#'
     urlType: fragment
-  - content: Brand&#8217;s Hardware &amp; Software Requirements
+  - content: Hartshorn Framework
     url: /xyz/5.2/index.html
     urlType: internal
   versions:
@@ -101,7 +76,7 @@ page:
       url: '#'
       urlType: fragment
       items:
-      - content: Brand&#8217;s Hardware &amp; Software Requirements
+      - content: Hartshorn Framework
         url: /xyz/5.2/index.html
         urlType: internal
       - content: Cu Solet
