--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "engines": {
     "node": ">= 8.0.0"
   },
+  "scripts": {
+    "preview": "gulp preview",
+    "bundle": "gulp bundle"
+  },
   "browserslist": [
     "last 2 versions"
   ],
